# knee-oa-bone-distance-cv

./: Knee OA Classification Presentation.pptx  Paper for 671 Knee Osteo Arthritis.docx  README.md
Image Processing/: AverageCartilageThickness.m  Processable.m  Splitter.m  test_distance_vectors.csv
cuda/: .gitignore  CMakeLists.txt  Makefile  OVERVIEW.md  QUICKSTART.md  README.md  build.sh  check_system.sh  compare_results.py  cuda_kernels.cu  cuda_kernels.cuh  main.cu
